--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </section>
     <section id="contact">
         <h2>Contact</h2>
-        <p>You can reach me at <a href="mailto:shailesh336mannur@gmail.com" style="color: #ffffff; text-decoration: underline;">shailesh336mannur@gmail.com</a> or <a href="mailto:shailesh336business@gmail.com" style="color: #ffffff; text-decoration: underline;">shailesh336business@gmail.com</a></p>
+        <p>You can reach me at <a href="" style="color: #ffffff; text-decoration: underline;"></a> or <a href="mailto:" style="color: #ffffff; text-decoration: underline;"></a></p>
     </section>
     <footer>
         <p>&copy; 2024 Shailesh Mannur</p>
